tests/pass/union_repro.tk

shape MyUnion(as i: i32 | as f: f32)

fn main() -> i32 {
    auto u = MyUnion(i = 42) // Should be valid for Union
    return 0
}
